# HelloWord_HY

./: LICENSE  README.md  plugindev.md
HelloWord-Dynamic-fw/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  HelloWord-Dynamic-fw.ioc  README.md  STM32F405RGTx_FLASH.ld  r1.h  stlink.cfg
HelloWord-Dynamic-fw/BSP/eink/: eink_290_bw.cpp  eink_290_bw.h  eink_290_bw_xy.cpp  eink_290_bw_xy.h  eink_def.h
HelloWord-Dynamic-fw/BSP/u8g2/: u8g2.h
HelloWord-Dynamic-fw/Core/Inc/: adc.h  i2c.h  stm32f4xx_it.h  tim.h  usart.h
HelloWord-Dynamic-fw/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
HelloWord-Dynamic-fw/Ctrl/Motor/: knob.cpp  knob.h  motor.cpp  motor.h
HelloWord-Dynamic-fw/Platform/Communication/: communication.cpp  interface_usb.cpp  interface_usb.hpp
HelloWord-Dynamic-fw/Platform/Utils/: rgb_light.cpp  rgb_light.h  time_utils.cpp
HelloWord-Dynamic-fw/USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c  usbd_desc.h
HelloWord-Dynamic-fw/UserApp/: Dev.cpp  Dev.hpp  build_info.h  build_info.h.in  common_inc.h  freertos_inc.h  main.cpp  os_define.hpp
HelloWord-Dynamic-fw/UserApp/SDK/: CList.cpp  (+19 more)
HelloWord-Dynamic-fw/assets/: screen.psd
HelloWord-Dynamic-fw/font/: 0  HW75_ICON_HY.fcp  hwd_hy.map  hwd_hy.sfd  hwd_hy_U24.c  hwd_hy_U32.c  hwd_hy_U40.c
HelloWord-Dynamic-fw/scripts/: STM32F405.svd  bdf.tga  build_end.bat  buildprotoc.bat  font.bat  uf2conv.cpp  uf2conv.py
HelloWord-Dynamic-fw/test/proto/: CMakeLists.txt  main.cpp
(+47 files in other folders)
